# cohete

./: Cargo.toml  README.md
.github/workflows/: book.yml  ci.yml
docs/book/: book.toml
docs/book/src/: README.md  SUMMARY.md  api-reference.md  configuration.md  device-discovery.md  examples.md  fleet.md  getting-started.md  integration.md  memory-management.md  quantization.md  thermal-management.md  troubleshooting.md
docs/book/src/configuration/: examples.md  schema.md
docs/book/src/device-discovery/: ethernet.md  mdns.md  usb.md
docs/book/src/fleet/: deployment.md  health.md  management.md
docs/book/src/getting-started/: hardware.md  installation.md  quick-start.md
docs/book/src/integration/: batuta.md  trueno.md
docs/book/src/memory-management/: budgets.md  estimation.md  guards.md
docs/book/src/quantization/: auto-select.md  levels.md  tradeoffs.md
docs/book/src/thermal-management/: circuit-breaker.md  policies.md  tegrastats.md
docs/specifications/: cohete.md
examples/: device_discovery.rs  fleet_management.rs  memory_budget.rs  quantization.rs  thermal_monitoring.rs  yaml_config.rs
src/: config.rs  device.rs  error.rs  fleet.rs  lib.rs  memory.rs  power.rs  provision.rs  quantize.rs  storage.rs  thermal.rs
